@@ -1,3 +1,8 @@
+2019-01-05  Tom Tromey  <tom@tromey.com>
+
+	PR gdb/28155:
+	* gdb.dwarf2/typedef-void-finish.exp: New file.
+
 2018-12-28  Tom Tromey  <tom@tromey.com>
 	    Simon Marchi <simark@simark.ca>
 
