@@ -1,5 +1,13 @@
 2019-01-05  Tom Tromey  <tom@tromey.com>
 
+	PR gdb/28155:
+	* python/py-finishbreakpoint.c (bpfinishpy_init): Use
+	check_typedef.
+	* infcmd.c (finish_command_fsm_should_stop): Use check_typedef.
+	(print_return_value): Likewise.
+
+2019-01-05  Tom Tromey  <tom@tromey.com>
+
 	* contrib/cleanup_check.py: Remove.
 	* contrib/gcc-with-excheck: Remove.
 	* contrib/exsummary.py: Remove.
